# viz_neural_network

./: .gitignore  Dockerfile  pyproject.toml
viz_neural_network/: __init__.py
viz_neural_network/models/fashion_mnist/: nnfs-visuals.ipynb
viz_neural_network/models/mnist/: MNIST-Pytorch.ipynb  dataset.py  model.py
viz_neural_network/models/mnist/models/: mnist-model-1708705996-state.dict  mnist-model-1708715133-state.dict  mnist-model-latest-state.dict
viz_neural_network/visualisations/: Visualisation-MNIST-Example.ipynb  utils.py
